apollo-router/tests/integration/snapshots/integration_tests__integration__validation__variable_validation_mode_propagates_fully@measure.snap
---
source: apollo-router/tests/integration/validation.rs
expression: response_body
---
{
  "data": null,
  "errors": [
    {
      "message": "Subgraph errors redacted",
      "path": []
    }
  ]
}
